// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table Component > should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-14 el-table"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-14 el-table"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component > should match a snapshot for cta content alternate settings 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-14 el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        role="table"
      >
        <div
          class="mocked-styled-0 el-table-headers-row"
          role="row"
        >
          <div
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon"
            />
          </div>
        </div>
        <div
          class="mocked-styled-9 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-2 el-table-row"
          >
            <div
              class="foo-bar el-table-cta-cell"
              role="cell"
              tabindex="0"
            >
              <div
                class="mocked-styled-11 el-table-cta-icon-container"
              >
                <span
                  class="el-intent-default el-icon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-14 el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      role="table"
    >
      <div
        class="mocked-styled-0 el-table-headers-row"
        role="row"
      >
        <div
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          <span
            class="el-intent-default el-icon"
          />
        </div>
      </div>
      <div
        class="mocked-styled-9 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-2 el-table-row"
        >
          <div
            class="foo-bar el-table-cta-cell"
            role="cell"
            tabindex="0"
          >
            <div
              class="mocked-styled-11 el-table-cta-icon-container"
            >
              <span
                class="el-intent-default el-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component > should match a snapshot for expandable content alternate settings 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-14 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="0"
        role="table"
      >
        <div
          class="mocked-styled-0 el-table-headers-row"
          role="row"
        >
          <div
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Some Content
          </div>
        </div>
        <div
          class="mocked-styled-9 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-2 el-table-row"
          >
            <div
              class="foo-bar el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon"
              />
            </div>
          </div>
          <div
            class="mocked-styled-12 el-table-expandable-row"
          >
            <div
              class="mocked-styled-13 el-table-expandable-container"
            >
              <p>
                I am the content that is only visible when expanded
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-14 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="0"
      role="table"
    >
      <div
        class="mocked-styled-0 el-table-headers-row"
        role="row"
      >
        <div
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Some Content
        </div>
      </div>
      <div
        class="mocked-styled-9 el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-2 el-table-row"
        >
          <div
            class="foo-bar el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-default el-icon"
            />
          </div>
        </div>
        <div
          class="mocked-styled-12 el-table-expandable-row"
        >
          <div
            class="mocked-styled-13 el-table-expandable-container"
          >
            <p>
              I am the content that is only visible when expanded
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component > should match a snapshot with full props and cta content 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-14 el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="8"
        role="table"
      >
        <div
          class="mocked-styled-0 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Property"
            class="el-span2 el-table-header"
            role="columnheader"
          >
            Property
          </div>
          <div
            aria-label="Customer"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Customer
          </div>
          <div
            aria-label="Client A/C"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Client A/C
          </div>
          <div
            aria-label="Description"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Description
          </div>
          <div
            aria-label="Request Date"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Request Date
          </div>
          <div
            aria-label="Amount"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Amount
          </div>
          <div
            aria-label="Payment Status"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Payment Status
          </div>
          <div
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Some Action
          </div>
        </div>
        <div
          class="el-is-active el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-2 el-table-row"
          >
            <div
              class="el-span2 el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon"
              />
              <div
                class="mocked-styled-10 el-table-cell-content"
                data-narrow-label="Property"
              >
                Mt Ash Jacket, Brassey Road
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon"
              />
              <div
                class="mocked-styled-10 el-table-cell-content"
                data-narrow-label="Customer"
              >
                Mr Johnny Corrigan
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
              >
                Alternate Lettings Client Acc
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
              >
                Tenant Payment Request
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
                data-narrow-label="Request Date"
              >
                19 Apr 2021
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
              >
                £50.00
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
              >
                Not Requested
              </div>
            </div>
            <div
              class="foo-bar el-table-cta-cell"
              role="cell"
              tabindex="0"
            >
              <div
                class="mocked-styled-11 el-table-cta-icon-container"
              >
                <span
                  class="el-intent-default el-icon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-14 el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="8"
      role="table"
    >
      <div
        class="mocked-styled-0 el-table-headers-row"
        role="row"
      >
        <div
          aria-label="Property"
          class="el-span2 el-table-header"
          role="columnheader"
        >
          Property
        </div>
        <div
          aria-label="Customer"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Customer
        </div>
        <div
          aria-label="Client A/C"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Client A/C
        </div>
        <div
          aria-label="Description"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Description
        </div>
        <div
          aria-label="Request Date"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Request Date
        </div>
        <div
          aria-label="Amount"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Amount
        </div>
        <div
          aria-label="Payment Status"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Payment Status
        </div>
        <div
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Some Action
        </div>
      </div>
      <div
        class="el-is-active el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-2 el-table-row"
        >
          <div
            class="el-span2 el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon"
            />
            <div
              class="mocked-styled-10 el-table-cell-content"
              data-narrow-label="Property"
            >
              Mt Ash Jacket, Brassey Road
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon"
            />
            <div
              class="mocked-styled-10 el-table-cell-content"
              data-narrow-label="Customer"
            >
              Mr Johnny Corrigan
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
            >
              Alternate Lettings Client Acc
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
            >
              Tenant Payment Request
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
              data-narrow-label="Request Date"
            >
              19 Apr 2021
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
            >
              £50.00
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
            >
              Not Requested
            </div>
          </div>
          <div
            class="foo-bar el-table-cta-cell"
            role="cell"
            tabindex="0"
          >
            <div
              class="mocked-styled-11 el-table-cta-icon-container"
            >
              <span
                class="el-intent-default el-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component > should match a snapshot with full props and expandable content 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-14 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="8"
        role="table"
      >
        <div
          class="mocked-styled-0 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Property"
            class="el-span2 el-table-header"
            role="columnheader"
          >
            Property
          </div>
          <div
            aria-label="Customer"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Customer
          </div>
          <div
            aria-label="Client A/C"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Client A/C
          </div>
          <div
            aria-label="Description"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Description
          </div>
          <div
            aria-label="Request Date"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Request Date
          </div>
          <div
            aria-label="Amount"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Amount
          </div>
          <div
            aria-label="Payment Status"
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            Payment Status
          </div>
          <div
            class="mocked-styled-1 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon"
            />
          </div>
        </div>
        <div
          class="el-is-active el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-2 el-table-row"
          >
            <div
              class="el-span2 el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon"
              />
              <div
                class="mocked-styled-10 el-table-cell-content"
                data-narrow-label="Property"
              >
                Mt Ash Jacket, Brassey Road
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <span
                class="el-intent-default el-icon"
              />
              <div
                class="mocked-styled-10 el-table-cell-content"
                data-narrow-label="Customer"
              >
                Mr Johnny Corrigan
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
              >
                Alternate Lettings Client Acc
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
              >
                Tenant Payment Request
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
                data-narrow-label="Request Date"
              >
                19 Apr 2021
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
              >
                £50.00
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-10 el-table-cell-content"
              >
                Not Requested
              </div>
            </div>
            <div
              class="mocked-styled-8 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-primary el-icon"
              />
            </div>
          </div>
          <div
            class="el-is-active el-table-expandable-row"
          >
            <div
              class="mocked-styled-13 el-table-expandable-container"
            >
              <p>
                I am the content that is only visible when expanded
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-14 el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="8"
      role="table"
    >
      <div
        class="mocked-styled-0 el-table-headers-row"
        role="row"
      >
        <div
          aria-label="Property"
          class="el-span2 el-table-header"
          role="columnheader"
        >
          Property
        </div>
        <div
          aria-label="Customer"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Customer
        </div>
        <div
          aria-label="Client A/C"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Client A/C
        </div>
        <div
          aria-label="Description"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Description
        </div>
        <div
          aria-label="Request Date"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Request Date
        </div>
        <div
          aria-label="Amount"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Amount
        </div>
        <div
          aria-label="Payment Status"
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          Payment Status
        </div>
        <div
          class="mocked-styled-1 el-table-header"
          role="columnheader"
        >
          <span
            class="el-intent-default el-icon"
          />
        </div>
      </div>
      <div
        class="el-is-active el-table-row-container"
        role="row"
      >
        <div
          class="mocked-styled-2 el-table-row"
        >
          <div
            class="el-span2 el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon"
            />
            <div
              class="mocked-styled-10 el-table-cell-content"
              data-narrow-label="Property"
            >
              Mt Ash Jacket, Brassey Road
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <span
              class="el-intent-default el-icon"
            />
            <div
              class="mocked-styled-10 el-table-cell-content"
              data-narrow-label="Customer"
            >
              Mr Johnny Corrigan
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
            >
              Alternate Lettings Client Acc
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
            >
              Tenant Payment Request
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
              data-narrow-label="Request Date"
            >
              19 Apr 2021
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
            >
              £50.00
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
            role="cell"
          >
            <div
              class="mocked-styled-10 el-table-cell-content"
            >
              Not Requested
            </div>
          </div>
          <div
            class="mocked-styled-8 el-table-expandable-row-trigger-cell"
            role="cell"
            tabindex="0"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
        </div>
        <div
          class="el-is-active el-table-expandable-row"
        >
          <div
            class="mocked-styled-13 el-table-expandable-container"
          >
            <p>
              I am the content that is only visible when expanded
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Table Component > should match a snapshot with varied number columns 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-14 el-table"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-14 el-table"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
